# python-docker-compose

./: .coverage  .env_example  .gitignore  Dockerfile  README.md  data_base.json  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
lms/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/fixtures/: test_data.json
lms/migrations/: 0001_initial.py  0002_alter_course_preview_alter_lesson_preview.py  0003_alter_course_description_alter_lesson_description.py  0004_alter_lesson_preview_alter_lesson_video_url.py  0005_course_owner_lesson_owner.py  0006_alter_course_owner_alter_lesson_owner.py  0007_subscription.py  0008_alter_subscription_unique_together.py  0009_course_price.py  0010_alter_course_price.py  0011_course_stripe_price_id_course_stripe_product_id.py  0012_alter_course_price.py  0013_remove_course_stripe_price_id_and_more.py  0014_course_last_updated.py
users/: admin.py  filters.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
users/fixtures/: groups.json
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_and_more.py  0003_alter_user_country.py  0004_payment.py  0005_alter_payment_payment_date.py  0006_alter_payment_options.py  0007_alter_payment_course_alter_payment_lesson_and_more.py  0008_subscription.py  0009_delete_subscription.py  0010_remove_payment_payment_method_payment_link_and_more.py  0011_alter_payment_amount.py  0012_rename_amount_payment_price.py  0013_remove_payment_price.py
(+4 files in other folders)
